# secure-enclave-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/: release-draft-rs.yml  release-draft.yml
.github/workflows/: release.yml  rs.yml
examples/: attestation.rs  biometric_auth.rs  dek_wrapping.rs  encryption.rs  jwt_assertion.rs  key_exchange.rs  key_exists.rs
py_secure_enclave/: Cargo.toml  README.md  pyproject.toml
py_secure_enclave/py_secure_enclave/: __init__.py  __init__.pyi
py_secure_enclave/src/: error.rs  jwt.rs  key.rs  lib.rs
py_secure_enclave/tests/: test_secure_enclave.py
py_secure_enclave/tests/bundle_app/: entitlements.plist.template  main.py  run_tests.sh  setup.py
src/: access_control.rs  cf.rs  encryption.rs  error.rs  jwt.rs  key_exchange.rs  key_management.rs  lib.rs  signing.rs
src/security/: mod.rs  types.rs
